# Technopark_CPP

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  InstallLibraries.cmake  main.cpp
.github/workflows/: build-it-1.yml  build-it.yml
individual-task-1/: CMakeLists.txt
individual-task-1/include/: Application.h  IO.h  Travel.h  utils.h
individual-task-1/src/: Application.c  IO.c  Travel.c  utils.c
individual-task-1/test/: app.cpp  main.cpp  reader.cpp  travel.cpp
